@@ -30,6 +30,8 @@
 #' this option recalculates the position values if necessary and set the max.
 #' value to 48. The old position number is appended as comment (e.g., 'OP: 70).
 #' This option accounts for potential compatibility problems with the Analyst software.
+#' It further limits the maximum number of points per curve to 9,999. If a curve contains more
+#' data the curve data got binned using the smallest possible bin width.
 #'
 #' @param txtProgressBar [logical] (*with default*):
 #' enables or disables [txtProgressBar].
@@ -52,7 +54,7 @@
 #' BIN/BINX-file may not fully compatible, at least not similar to the once
 #' directly produced by the Risoe readers!
 #'
-#' @section Function version: 0.4.3
+#' @section Function version: 0.4.4
 #'
 #' @author
 #' Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)
@@ -95,26 +97,91 @@ write_R2BIN <- function(
 
   ##check if input object is of type 'Risoe.BINfileData'
   if(is(object, "Risoe.BINfileData") == FALSE){
-
-    stop("[write_R2BIN()] Input object is not of type Risoe.BINfileData!")
+    stop("[write_R2BIN()] Input object is not of type Risoe.BINfileData!", call. = FALSE)
 
   }
 
-  ##check if it fullfills the latest definition
-  if(ncol(object@METADATA) != 80){
-    stop("[write_R2BIN()] The number of columns in your slot 'METADATA' does not fit to the latest definition. What you are probably trying to do is to export a Risoe.BINfileData object you generated by your own or you imported with an old package version some time ago. Please re-import the BIN-file using the function read_BIN2R().")
+  ##check if it fullfills the latest definition ...
+  if(ncol(object@METADATA) != ncol(set_Risoe.BINfileData()@METADATA)){
+    stop("[write_R2BIN()] The number of columns in your slot 'METADATA' does not fit to the latest definition. What you are probably trying to do is to export a Risoe.BINfileData object you generated by your own or you imported with an old package version some time ago. Please re-import the BIN-file using the function read_BIN2R().", call. = FALSE)
 
   }
 
   ##check if input file is of type 'character'
   if(is(file, "character") == FALSE){
-
-    stop("[write_R2BIN()] argument 'file' has to be of type character!")
+    stop("[write_R2BIN()] argument 'file' has to be of type character!", call. = FALSE)
 
   }
 
 
   # Check Risoe.BINfileData Struture ----------------------------------------
+
+  ##check wether the BIN-file DATA slot contains more than 9999 records; needs to be run all the time
+  temp_check <- vapply(object@DATA, function(x){
+    if(length(x) > 9999){
+      TRUE
+    }else{
+      FALSE
+    }
+
+  }, FUN.VALUE = logical(1))
+
+  ##force compatibility
+  if(compatibility.mode && any(temp_check)){
+
+    ##drop warning
+    warning("[write_R2BIN()] Compatibility mode selected: Some data sets are longer than 9,999 points and will be binned!", call. = FALSE)
+
+    ##BIN data to reduce amount of data if the BIN-file is too long
+    object@DATA <- lapply(object@DATA, function(x){
+      if(length(x) > 9999){
+
+        ##we want to have a minimum binning (smallest number possible)
+        bin_width <- ceiling(length(x)/9999)
+
+        ##it should be symatric, thus, remove values
+        if((length(x)/bin_width)%%2 != 0){
+          x <- x[-length(x)]
+
+        }
+
+        ##create matrix and return
+        colSums(matrix(x, nrow = bin_width))
+
+
+      }else{
+        x
+
+      }
+
+    })
+
+    ##reset temp_check
+    temp_check <- FALSE
+
+    ##get new number of points
+    temp_NPOINTS <- sapply(object@DATA, length)
+
+    ##correct LENGTH
+    object@METADATA[["LENGTH"]] <- object@METADATA[["LENGTH"]] - (4 * object@METADATA[["NPOINTS"]]) + (temp_NPOINTS * 4)
+
+    ##correct PREVIOUS
+    object@METADATA[["PREVIOUS"]] <- c(0,object@METADATA[["LENGTH"]][2:length(object@METADATA[["LENGTH"]])])
+
+    ##correct NPOINTS
+    object@METADATA[["NPOINTS"]] <- temp_NPOINTS
+
+    ##write comment
+    object@METADATA[["COMMENT"]] <- paste(object@METADATA[["COMMENT"]], " - binned")
+
+  }
+
+  if(any(temp_check))
+    stop(paste("[write_R2BIN()]", length(which(temp_check)), " out of ",length(temp_check), "records contain more than 9,999 data points. This violates the BIN/BINX-file definition!"), call. = FALSE)
+
+  ##remove
+  rm(temp_check)
+
 
   ##VERSION
 
