@@ -117,7 +117,10 @@
   \item \code{write_R2BIN()}{
         \itemize{
          \item The BIN-file export to version 04 failed in very rare cases for \code{NA} values
-         in the byte position \code{SEQUENCE}; fixed.
+         in the byte position \code{SEQUENCE}; fixed,
+         \item the compatibility mode was extended to limit the maxium number of points for one
+         curve to 9,999 (if the option is chosen). This gives more compatibility with older versions
+         of the Analyst.
 
 
     }
